<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.criptext.monkeychatandroid.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fullname"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:maxLength="30"
            android:hint="@string/fullname"
            android:nextFocusDown="@+id/editTextMonkeyId"
            android:inputType="text"/>

        <EditText
            android:id="@id/editTextMonkeyId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:maxLength="30"
            android:hint="@string/monkeyId"
            android:imeOptions="actionDone"
            android:inputType="text"/>
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_continuar"
            android:padding="15dp"
            android:onClick="onContinue"/>

        <ProgressBar
            android:id="@+id/progressBarCargando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
